--- a/indexru.html
+++ b/indexru.html
@@ -269,7 +269,7 @@
 											<span class="icon flaticon-mortarboard"></span>
 										</div>
 										<h4><span style="color:#000">Ежемесячные, ежемесячные тесты</span></h4>
-										<div class="text">абитуриенты проверили свои знания по темам, пройденным в течение 1 месяца, таким как тестирование в вузе под строгим контролем, и каждый вопрос анализируется и недостатки изучаются заново.</div>
+										<div class="text"ученики проверили свои знания по темам, пройденным в течение 1 месяца, таким как тестирование в вузе под строгим контролем, и каждый вопрос анализируется и недостатки изучаются заново.</div>
 									</div>
 								</div>
 							</div>
@@ -280,15 +280,15 @@
 									<div class="icon-box">
 										<span class="icon flaticon-bar-chart"></span>
 									</div>
-									<h4><span style="color:#000">Сортировка абитуриентов по группам</span></h4>
-									<div class="text">распределяет абитуриентов, которые заключили контракт с учебным центром Компас по учебной программе, на группы посредством тестирования.</div>
+									<h4><span style="color:#000">Сортировка учеников по группам</span></h4>
+									<div class="text">распределяет учеников, которые заключили контракт с учебным центром Компас по учебной программе, на группы посредством тестирования.</div>
 								</div>
 							</div>
 							
 						</div>
 					</div>
 				</div>
-				<!-- Video Column -->
+				<!-- Video Column --> 
 				<div class="video-column col-lg-4 col-md-12 col-sm-12">
 					<div class="inner-column">
 						<div class="color-two"></div>
