--- a/indexru.html
+++ b/indexru.html
@@ -269,7 +269,7 @@
 											<span class="icon flaticon-mortarboard"></span>
 										</div>
 										<h4><span style="color:#000">Ежемесячные, ежемесячные тесты</span></h4>
-										<div class="text"ученики проверили свои знания по темам, пройденным в течение 1 месяца, таким как тестирование в вузе под строгим контролем, и каждый вопрос анализируется и недостатки изучаются заново.</div>
+										<div class="text">ученики проверили свои знания по темам, пройденным в течение 1 месяца, таким как тестирование в вузе под строгим контролем, и каждый вопрос анализируется и недостатки изучаются заново.</div>
 									</div>
 								</div>
 							</div>
@@ -288,7 +288,7 @@
 						</div>
 					</div>
 				</div>
-				<!-- Video Column --> 
+				<!-- Video Column -->
 				<div class="video-column col-lg-4 col-md-12 col-sm-12">
 					<div class="inner-column">
 						<div class="color-two"></div>
